set headings in interactive.css to black, remove coloured background from image BZ#650950
git-svn-id: file:///srv/svn/publican/trunk@1643 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/web/interactive.css
+++ b/publican/web/interactive.css
@@ -244,7 +244,7 @@ object.toc, iframe.toc {
 	height: 100px;
 	background-image:url(images/title.png);
 	background-repeat: no-repeat;
-	background-color: #7b0000;
+	background-color: none;
 }
 
 .tocnav .outer h1 {
@@ -437,7 +437,7 @@ object.toc, iframe.toc {
 }
 
 h1, h2, h3, h4, h5, th {
-	color: #a70000
+	color: #000
 }
 
 .static_tocnavwrap ul {
@@ -492,7 +492,7 @@ h1, h2, h3, h4, h5, th {
 	padding-top: 1em;
 	margin-left: 1em !important;
 	font-size: 3em;
-	color: #a70000;
+	color: #000;
 }
 
 .static_tocnavwrap h2 {
@@ -500,7 +500,7 @@ h1, h2, h3, h4, h5, th {
 	padding-top: 3em;
 	margin-left: 1em !important;
 	font-size: 2em;
-	color: #a70000;
+	color: #000;
 }
 
 .static_tocnavwrap .version {
