logos and colours
git-svn-id: file:///srv/svn/publican/trunk@1780 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican-openshift/en-US/css/overrides.css
+++ b/publican-openshift/en-US/css/overrides.css
@@ -7,23 +7,19 @@ a:visited {
 }
 
 h1 {
-	color:#a70000;
+	color:#000000;
 }
 
 .producttitle {
-	background: #a70000 url(../images/h1-bg.png) top left repeat;
+	background: #000000 url(../images/h1-bg.png) top left repeat;
 }
 
 .section h1.title {
-	color:#a70000;
+	color:#000000;
 }
 
 h2,h3,h4,h5,h6 {
-	color:#a70000;
-}
-
-.example {
-	background-color:#c8c5ac;
+	color:#000000;
 }
 
 table {
@@ -39,11 +35,11 @@ table tr.even td {
 }
 
 .revhistory table th {
-	color:#a70000;
+	color:#000000;
 }
 
-.edition {
-	color: #a70000;
+.titlepage .edition {
+	color: #000000;
 }
 
 span.remark{
