colours and styles
git-svn-id: file:///srv/svn/publican/trunk@1781 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican-openshift/en-US/css/overrides.css
+++ b/publican-openshift/en-US/css/overrides.css
@@ -7,19 +7,19 @@ a:visited {
 }
 
 h1 {
-	color:#000000;
+	color:#333333;
 }
 
 .producttitle {
-	background: #000000 url(../images/h1-bg.png) top left repeat;
+	background: #888888 url(../images/h1-bg.png) top left no-repeat;
 }
 
 .section h1.title {
-	color:#000000;
+	color:#333333;
 }
 
 h2,h3,h4,h5,h6 {
-	color:#000000;
+	color:#333333;
 }
 
 table {
@@ -27,7 +27,7 @@ table {
 }
 
 table th {
-	background-color:#900;
+	background-color:#474747;
 }
 
 table tr.even td {
@@ -35,11 +35,11 @@ table tr.even td {
 }
 
 .revhistory table th {
-	color:#000000;
+	color:#333333;
 }
 
 .titlepage .edition {
-	color: #000000;
+	color: #333333;
 }
 
 span.remark{
