--- a/publican-jboss/en-US/css/overrides.css
+++ b/publican-jboss/en-US/css/overrides.css
@@ -50,3 +50,7 @@ table tr.even td {
 span.remark{
 	background-color: #ffff00;
 }
+
+table.simplelist.extra_trademarks > tbody > tr > td {
+	padding:0.5em 0em;
+}
