updated the common stylesheet to make the titles of books in a set to be more prominent. also removed the bottom border from all the links in the in-document TOCs
git-svn-id: file:///srv/svn/publican/trunk@1882 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/datadir/Common_Content/common/en-US/css/common.css
+++ b/publican/datadir/Common_Content/common/en-US/css/common.css
@@ -126,6 +126,12 @@ div.longdesc-link {
 
 .toc a, .qandaset a {
 	font-weight:normal;
+	border:none;
+}
+
+.toc a:hover, .qandaset a:hover
+{
+	border-bottom: 1px dotted
 }
 
 /*headings*/
@@ -990,6 +996,11 @@ th.dbkey {
 span.book {
 	margin-top:4em;
 	display:block;
+	font-size:11pt;
+}
+
+span.book a{
+	font-weight:bold;
 }
 
 span.chapter {
