Change stepalternative list style. BZ #687894
git-svn-id: file:///srv/svn/publican/trunk@1908 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/datadir/Common_Content/common/en-US/css/common.css
+++ b/publican/datadir/Common_Content/common/en-US/css/common.css
@@ -1512,7 +1512,7 @@ div.toc > dl > dt {
 
 .stepalternatives {
 	list-style-image: none;
-	list-style-type: none;
+	list-style-type: upper-alpha;
 }
 
 
