fix ugly header
git-svn-id: file:///srv/svn/publican/trunk@1929 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican-redhat/en-US/css/overrides.css
+++ b/publican-redhat/en-US/css/overrides.css
@@ -11,7 +11,8 @@ h1 {
 }
 
 .producttitle {
-	background: #a70000 url(../images/h1-bg.png) top left repeat;
+/*	background: #a70000 url(../images/h1-bg.png) top left repeat; */
+	color:#a70000;
 }
 
 .section h1.title {
