--- a/publican-redhat/en-US/css/overrides.css
+++ b/publican-redhat/en-US/css/overrides.css
@@ -6,11 +6,11 @@ a:visited {
 	color:#6699cc;
 }
 
-h1 {
+h1,h2,h3,h4,h5,h6 {
 	color:#a70000;
 }
 
-.producttitle {
+div.producttitle {
 /*	background: #a70000 url(../images/h1-bg.png) top left repeat; */
 	color:#a70000;
 }
@@ -19,9 +19,7 @@ h1 {
 	color:#a70000;
 }
 
-h2,h3,h4,h5,h6 {
-	color:#a70000;
-}
+
 
 table {
 	border:1px solid #aaa;
