--- a/publican/datadir/Common_Content/common/en-US/css/common.css
+++ b/publican/datadir/Common_Content/common/en-US/css/common.css
@@ -1,3 +1,8 @@
+* {
+	widows: 4 !important;
+	orphans: 4 !important;
+}
+
 body, h1, h2, h3, h4, h5, h6, pre, li, div {
 	line-height: 1.29em;
 }
@@ -6,9 +11,9 @@ body {
 	background-color: white;
 	margin:0 auto;
 	font-family: "liberation sans", "Myriad ", "Bitstream Vera Sans", "Lucida Grande", "Luxi Sans", "Trebuchet MS", helvetica, verdana, arial, sans-serif;
-	font-size:12px;
-	max-width:55em;
-	color:black;
+	font-size: 14px;
+	max-width: 55em;
+	color: black;
 }
 
 body.toc_embeded {
@@ -18,14 +23,14 @@ body.toc_embeded {
 
 object.toc, iframe.toc {
 	/*for web hosting system only*/
-	border-style:none;
-	position:fixed;
-	width:290px;
-	height:99.99%;
-	top:0;
-	left:0;
+	border-style: none;
+	position: fixed;
+	width: 290px;
+	height: 99.99%;
+	top: 0;
+	left: 0;
 	z-index: 100;
-	border-style:none;
+	border-style: none;
 	border-right:1px solid #999;
 }
 
@@ -38,14 +43,14 @@ body.notoc {
 iframe.notoc {
 	border-style:none;
 	border: none;
-	padding: 0em;
+	padding: 0px;
 	position:fixed;
 	width: 21px;
 	height: 29px;
 	top: 0px;
 	left:0;
 	overflow: hidden;
-	margin: 0em;
+	margin: 0px;
 	margin-left: -3px;
 }
 /* End hide web menu */
@@ -58,13 +63,14 @@ body.desktop {
 body.desktop .book > .toc {
 	display:block;
 	width:24em;
-	height:99%;
+	height:99.99%;
 	position:fixed;
 	overflow:auto;
 	top:0px;
 	left:0px;
-	padding-left:1em;
+/*	padding-left:1em; */
 	background-color:#EEEEEE;
+	font-size: 12px;
 }
 
 .toc {
@@ -92,14 +98,19 @@ div {
 }
 
 div.section {
-	padding-top:1em;
+	page-break-inside: avoid;
 }
 
 p, div.para, div.formalpara {
-	padding-top:0px;
-	margin-top:0.3em;
-	padding-bottom:0px;
-	margin-bottom:1em;
+	padding-top: 0px;
+	margin-top: 0.3em;
+	padding-bottom: 0px;
+	margin-bottom: 1em;
+}
+
+.varlistentry div.para {
+	page-break-before: avoid;
+
 }
 
 /*Links*/
@@ -108,7 +119,7 @@ a {
 }
 
 a:link {
-	text-decoration:none;
+	text-decoration: none;
 	border-bottom: 1px dotted ;
 	color:#3366cc;
 }
@@ -131,48 +142,50 @@ div.longdesc-link {
 
 .toc a:hover, .qandaset a:hover
 {
-	border-bottom: 1px dotted
+	border-bottom: 1px dotted;
 }
 
 /*headings*/
 h1, h2, h3, h4, h5, h6 {
 	color: #336699;
-	margin-top: 0em;
-	margin-bottom: 0em;
+	margin-top: 0px;
+	margin-bottom: 0px;
 	background-color: transparent;
+	margin-bottom: 0px;
+	margin-top: 20px;
+	page-break-inside: avoid;
+	page-break-after: avoid;
 }
 
 h1 {
-	font-size:2.0em;
+	font-size: 22px;
 }
 
 .titlepage h1.title {
-	font-size: 3.0em;
-	padding-top: 1em;
 	text-align:left;
 }
 
 .book > .titlepage h1.title {
-	text-align:center;
+	text-align: center;
 }
 
 .article > .titlepage h1.title {
-	text-align:center;
+	text-align: center;
 }
 
 .set .titlepage > div > div > h1.title {
-	text-align:center;
+	text-align: center;
 }
 
-.producttitle {
-	margin-top: 0em;
-	margin-bottom: 0em;
-	font-size: 3.0em;
+div.producttitle {
+	margin-top: 0px;
+	margin-bottom: 20px;
+	font-size: 48px;
 	font-weight: bold;
-	background: #003d6e url(../images/h1-bg.png) top left repeat-x;
-	color: white;
+/* 	background: #003d6e url(../images/h1-bg.png) top left repeat-x; */
+	color:  #336699;
 	text-align: center;
-	padding: 0.7em;
+	padding-top: 12px;
 }
 
 .titlepage .corpauthor {
@@ -181,58 +194,60 @@ h1 {
 }
 
 .section h1.title {
-	font-size: 1.6em;
-	padding: 0em;
+	font-size: 18px;
+	padding: 0px;
 	color: #336699;
 	text-align: left;
 	background: white;
 }
 
 h2 {
-	font-size:1.6em;
+	font-size: 20px;
+	margin-top: 30px;
 }
 
 
 h2.subtitle, h3.subtitle {
 	margin-top: 1em;
 	margin-bottom: 1em;
-	font-size: 1.4em;
+	font-size: 18px;
 	text-align: center;
 }
 
 .preface > div > div > div > h2.title {
 	margin-top: 1em;
-	font-size: 2.0em;
+	font-size: 18px;
 }
 
 .appendix h2 {
-	margin-top: 1em;
-	font-size: 2.0em;
+	font-size: 18px;
 }
 
 
 
 h3 {
-	font-size:1.3em;
-	padding-top:0em;
-	padding-bottom:0em;
+	font-size: 14px;
+	padding-top:0px;
+	padding-bottom: 0px;
+	margin-bottom: 0px;
 }
 h4 {
-	font-size:1.1em;
-	padding-top:0em;
-	padding-bottom:0em;
+	font-size: 14px;
+	padding-top:0px;
+	padding-bottom:0px;
 }
 
 h5 {
-	font-size:1em;
+	font-size: 14px;
 }
 
 h6 {
-	font-size:1em;
+	font-size: 14px;
+	margin-bottom: 0px;
 }
 
 h5.formalpara {
-	font-size:1em;
+	font-size: 14px;
 	margin-top:2em;
 	margin-bottom:.8em;
 }
@@ -240,7 +255,7 @@ h5.formalpara {
 .abstract h6 {
 	margin-top:1em;
 	margin-bottom:.5em;
-	font-size:2em;
+	font-size: 22px;
 }
 
 /*element rules*/
@@ -249,17 +264,16 @@ hr {
 	border-style:none;
 	border-top: 1px dotted #ccc;
 	width:100%;
-	margin-top: 3em;
 }
 
 /* web site rules */
 ul.languages, .languages li {
 	display:inline;
-	padding:0em;
+	padding:0px;
 }
 
 .languages li a {
-	padding:0em .5em;
+	padding:0px .5em;
 	text-decoration: none;
 }
 
@@ -295,17 +309,17 @@ ul.languages {
 }
 
 a.version {
-	font-size:2em;
+	font-size: 20px;
 	text-decoration:none;
 	width:100%;
 	display:block;
-	padding:1em 0em .2em 0em;
+	padding:1em 0px .2em 0px;
 	clear:both;
 }
 
 a.version:before {
 	content:"Version";
-	font-size:smaller;
+	font-size: smaller;
 }
 
 a.version:visited, a.version:link {
@@ -340,7 +354,7 @@ a.version:focus, a.version:hover {
 	position:absolute;
 	left:170px;
 	top:0px;
-	font-size:smaller;
+	font-size: smaller;
 }
 
 .books .pdf:link, .books .pdf:visited {
@@ -368,7 +382,7 @@ a.version:focus, a.version:hover {
 
 .products li a {
 	width:300px;
-	padding:.5em 0em;
+	padding:.5em 0px;
 }
 
 .products ul {
@@ -383,7 +397,7 @@ a.version:focus, a.version:hover {
 .revhistory table {
 	background-color:transparent;
 	border-color:#fff;
-	padding:0em;
+	padding:0px;
 	margin: 0;
 	border-collapse:collapse;
 	border-style:none;
@@ -391,7 +405,7 @@ a.version:focus, a.version:hover {
 
 .revhistory td {
 	text-align :left;
-	padding:0em;
+	padding:0px;
 	border: none;
 	border-top: 1px solid #fff;
 	font-weight: bold;
@@ -417,17 +431,17 @@ a.version:focus, a.version:hover {
 	text-align: center;
 }
 
-h3.author {
-	margin: 0em;
-	padding: 0em;
-	padding-top: 1em;
+h3.author,
+h3.editor {
+	margin: 0px;
+	padding: 0px;
+	margin-top: 12px;
+	font-size: 14px;
 }
 
-.authorgroup h4 {
-	padding: 0em;
-	margin: 0em;
-	padding-top: 1em;
-	margin-top: 1em;
+h4.editedby {
+	margin-top: 15px;
+	margin-bottom: 5px;
 }
 
 .author, 
@@ -436,6 +450,8 @@ h3.author {
 .othercredit,
 .contrib {
 	display: block;
+	font-size: 14px;
+	page-break-inside: avoid;
 }
 
 .revhistory .author {
@@ -448,8 +464,8 @@ h3.author {
 
 
 .othercredit {
-	margin:0em;
-	padding:0em;
+	margin:0px;
+	padding:0px;
 }
 
 .releaseinfo {
@@ -617,27 +633,27 @@ ol.upperroman {
 
 dt {
 	font-weight:bold;
-	margin-bottom:0em;
-	padding-bottom:0em;
+	margin-bottom:0px;
+	padding-bottom:0px;
 }
 
 dd {
-	margin:0em;
+	margin:0px;
 	margin-left:2em;
-	padding-top:0em;
+	padding-top:0px;
 	padding-bottom: 1em;
 }
 
 li {
-	padding-top:0px;
-	margin-top:0em;
-	padding-bottom:0px;
-	margin-bottom:0.4em;
+	padding-top: 0px;
+	margin-top: 0px;
+	padding-bottom: 0px;
+/*	margin-bottom: 16px; */
 }
 
 li p, li div.para {
 	padding-top:0px;
-	margin-top:0em;
+	margin-top:0px;
 	padding-bottom:0px;
 	margin-bottom:0.3em;
 }
@@ -650,17 +666,18 @@ img {
 
 .inlinemediaobject, .inlinemediaobject img {
 	display:inline;
-	margin:0em;
+	margin:0px;
 }
 
-.figure img {
+.figure img,
+.mediaobject img {
 	display:block;
 	margin:0;
 	page-break-inside: avoid;
 }
 
 .figure .title {
-	margin:0em;
+	margin:0px;
 	margin-bottom:2em;
 	padding:0px;
 }
@@ -683,7 +700,7 @@ img {
 }
 
 .prompt {
-	padding:0em .3em;
+	padding:0px .3em;
 }
 
 /*user interface styles*/
@@ -693,13 +710,12 @@ img {
 .guibutton, .guilabel {
 	font-family: "liberation mono", "bitstream vera mono", "dejavu mono", monospace;
 	font-weight: bold;
-	white-space: nowrap;
 }
 
 .example {
 	background-color: #ffffff;
 	border-left: 3px solid #aaaaaa;
-	padding-top: 1em;
+	padding-top: 1px;
 	padding-bottom: 0.1em;
 }
 
@@ -743,7 +759,7 @@ pre {
 	display:block;
 	background-color: #f5f5f5;
 	color: #000000;
-	border: 1px solid #aaaaaa;
+/*	border: 1px solid #aaaaaa; */
 	margin-bottom: 1em;
 	padding:.5em 1em;
 	white-space: pre-wrap; /* css-3 */
@@ -752,6 +768,10 @@ pre {
 	white-space: -o-pre-wrap; /* Opera 7 */
 	word-wrap: break-word; /* Internet Explorer 5.5+ */
 	font-size: 0.9em;
+	border-style:none; box-shadow: 0 2px 5px #AAAAAA inset;
+	-moz-box-shadow:  0 2px 5px #AAAAAA inset;
+	-webkit-box-shadow: 0 2px 5px #AAAAAA inset;
+	-o-box-shadow: 0 2px 5px #AAAAAA inset;
 }
 
 pre .replaceable, 
@@ -760,7 +780,6 @@ pre .keycap {
 
 code {
 	font-family:"liberation mono", "bitstream vera mono", "dejavu mono", monospace;
-/*	white-space: nowrap;*/
 	white-space: pre-wrap;
 	word-wrap: break-word;
 	font-weight:bold;
@@ -773,6 +792,12 @@ code {
 	white-space: -pre-wrap; /* Opera 4-6 */
 	white-space: -o-pre-wrap; /* Opera 7 */
 	word-wrap: break-word; /* Internet Explorer 5.5+ */
+}
+
+code.email {
+	font-weight: normal;
+	font-family: "liberation sans", "Myriad ", "Bitstream Vera Sans", "Lucida Grande", "Luxi Sans", "Trebuchet MS", helvetica, verdana, arial, sans-serif;
+
 }
 
 /*Notifications*/
@@ -793,8 +818,8 @@ div.important:before {
 
 div.warning, div.note, div.important {
 	color: black;
-	margin: 0em;
-	padding: 0em;
+	margin: 0px;
+	padding: 0px;
 	background: none;
 	background-color: white;
 	margin-bottom: 1em;
@@ -803,25 +828,25 @@ div.warning, div.note, div.important {
 }
 
 div.warning h2, div.note h2,div.important h2 {
-	margin: 0em;
-	padding: 0em;
+	margin: 0px;
+	padding: 0px;
 	color: #eeeeec;
 	padding-top: 0px;
 	padding-bottom: 0px;
 	height: 1.4em;
 	line-height: 1.4em;
-	font-size: 1.4em;
+	font-size: 17px;
 	display:inline;
 }
 
 div.admonition_header {
 	clear: both;
-	margin: 0em;
-	padding: 0em;
-	margin-top: -3.3em;
+	margin: 0px;
+	padding: 0px;
+	margin-top: -40px;
 	padding-left: 58px;
-	line-height: 1.0em;
-	font-size: 1.0em;
+	line-height: 1.0px;
+	font-size: 1.0px;
 }
 
 div.warning div.admonition_header {
@@ -842,16 +867,16 @@ div.important div.admonition_header {
 div.warning p, div.warning div.para,
 div.note p, div.note div.para,
 div.important p, div.important div.para {
-	padding: 0em;
-	margin: 0em;
+	padding: 0px;
+	margin: 0px;
 }
 
 div.admonition {
 	border: none;
 	border-left: 1px solid #aaaaaa;
 	border-right: 1px solid #aaaaaa;
-	padding:0em;
-	margin:0em;
+	padding:0px;
+	margin:0px;
 	padding-top: 1.5em;
 	padding-bottom: 1em;
 	padding-left: 2em;
@@ -867,7 +892,7 @@ div.admonition {
 	display:block;
 	height:45px;
 	padding-bottom:1em;
-	margin:0em;
+	margin:0px;
 }
 
 #title a.left{
@@ -878,7 +903,7 @@ div.admonition {
 #title a.left img{
 	border:none;
 	float:left;
-	margin:0em;
+	margin:0px;
 	margin-top:.7em;
 }
 
@@ -889,7 +914,7 @@ div.admonition {
 #title a.right img {
 	border:none;
 	float:right;
-	margin:0em;
+	margin:0px;
 	margin-top:.7em;
 }
 
@@ -899,12 +924,14 @@ div.table {
 }
 
 table {
-	border:1px solid #6c614b;
+	border: 1px solid #444;
 	width:100%;
 	border-collapse:collapse;
 }
 
-table.simplelist, .calloutlist table {
+table.blockquote,
+table.simplelist,
+.calloutlist table {
 	border-style: none;
 }
 
@@ -923,27 +950,35 @@ table tr.even td {
 	background-color:#f5f5f5;
 }
 
+tr:nth-child(even) {
+	background-color: #eeeeee;
+
+}
+
+
 table th p:first-child, table td p:first-child, table  li p:first-child,
 table th div.para:first-child, table td div.para:first-child, table  li div.para:first-child {
-	margin-top:0em;
-	padding-top:0em;
+	margin-top:0px;
+	padding-top:0px;
 	display:inline;
 }
 
 th, td {
 	border-style:none;
 	vertical-align: top;
-	border: 1px solid #000;
+/* 	border: 1px solid #000; */
 }
 
-.simplelist th, .simplelist td {
+.blockquote td, 
+.simplelist th,
+.simplelist td {
 	border: none;
 }
 
 table table td {
 	border-bottom:1px dotted #aaa;
 	background-color:white;
-	padding:.6em 0em;
+	padding:.6em 0px;
 }
 
 table table {
@@ -996,16 +1031,14 @@ th.dbkey {
 span.book {
 	margin-top:4em;
 	display:block;
-	font-size:11pt;
+	font-size: 11pt;
 }
 
 span.book a{
 	font-weight:bold;
 }
-
 span.chapter {
 	display:block;
-	margin-top:0.5em;
 }
 
 table.simplelist td, .calloutlist table td {
@@ -1043,12 +1076,21 @@ table.simplelist td, .calloutlist table td {
 	color:#333;
 }
 
+dl {
+	margin-top: 0px;
+	margin-left: 28px;
+}
+
+.toc dl {
+	margin-left: 10px;
+}
+
 /*index*/
 .glossary h3, 
 .index h3 {
-	font-size: 2em;
+	font-size: 20px;
 	color:#aaa;
-	margin:0em;
+	margin:0px;
 }
 
 .indexdiv {
@@ -1065,7 +1107,7 @@ table.simplelist td, .calloutlist table td {
 .index dl dl dt {
 	color:#777;
 	font-weight:normal;
-	padding-top:0em;
+	padding-top:0px;
 }
 
 .index dl dl dt:before {
@@ -1075,21 +1117,23 @@ table.simplelist td, .calloutlist table td {
 
 /*changes*/
 .footnote {
-	font-size: .7em;
-	margin:0em;
-	color:#222;
+	font-size: 10px;
+	margin: 0px;
+	color: #222;
+}
+
+.footnotes {
+	margin-bottom: 60px;
 }
 
 table .footnote {
 }
 
 sup {
-	color:#999;
-	margin:0em;
-	padding:0em;
-	line-height: .4em;
-	font-size: 1em;
-	padding-left:0em;
+	margin:0px;
+	padding:0px;
+	font-size: 10px;
+	padding-left:0px;
 }
 
 .footnote {
@@ -1117,7 +1161,7 @@ sup {
 }
 
 .footnote a:link, 
-.footnote a:visited {
+.footnote a:visited before{
 	color:#00537c;
 }
 
@@ -1125,14 +1169,51 @@ sup {
 }
 
 /**/
+.pdf-break {
+	page-break-before: always;
+}
+
+div.legalnotice {
+	page-break-before: always;
+}
+
+div.abstract {
+	page-break-before: always;
+	page-break-after: always;
+}
+
 div.chapter {
-	margin-top:3em;
+	page-break-before: always;
+}
+
+
+div.titlepage {
 	page-break-inside: avoid;
+	page-break-after: avoid;
+}
+
+div.preface, div.part {
+	page-break-before: always;
+}
+
+div.appendix {
+	page-break-before: always;
 }
 
 div.section {
-	margin-top:1em;
 	page-break-inside: auto;
+	page-break-before: auto;
+	page-break-after: auto;
+}
+
+
+dt.varlistentry {
+	page-break-inside: avoid;
+	page-break-after: avoid;
+}
+
+dd {
+	page-break-before: avoid;
 }
 
 div.note .replaceable, 
@@ -1144,9 +1225,9 @@ div.warning .keycap
 {
 }
 
-ul li p:last-child, ul li div.para:last-child {
-	margin-bottom:0em;
-	padding-bottom:0em;
+ul li p:last-child, ul li para:last-child {
+	margin-bottom:0px;
+	padding-bottom:0px;
 }
 
 /*document navigation*/
@@ -1158,8 +1239,8 @@ ul li p:last-child, ul li div.para:last-child {
 
 .docnav {
 	list-style:none;
-	margin:0em;
-	padding:0em;
+	margin:0px;
+	padding:0px;
 	position:relative;
 	width:100%;
 	padding-bottom:2em;
@@ -1169,10 +1250,10 @@ ul li p:last-child, ul li div.para:last-child {
 
 .docnav li {
 	list-style:none;
-	margin:0em;
-	padding:0em;
+	margin:0px;
+	padding:0px;
 	display:inline;
-	font-size:.8em;
+	font-size: 14px;
 }
 
 .docnav li:before {
@@ -1185,7 +1266,7 @@ ul li p:last-child, ul li div.para:last-child {
 }
 
 .docnav li.up, .docnav li.home {
-	margin:0em 1.5em;
+	margin:0px 1.5em;
 }
 
 .docnav li.previous {
@@ -1213,7 +1294,6 @@ ul li p:last-child, ul li div.para:last-child {
 	padding-top:3px;
 	padding-bottom:4px;
 	padding-right:28px;
-	font-size:1.2em;
 }
 
 .docnav li.previous a strong {
@@ -1222,21 +1302,18 @@ ul li p:last-child, ul li div.para:last-child {
 	padding-bottom:4px;
 	padding-left:28px;
 	padding-right:0.5em;
-	font-size:1.2em;
 }
 
 .docnav li.home a strong {
 	background: url(../images/stock-home.png) top left no-repeat;
 	padding:5px;
 	padding-left:28px;
-	font-size:1.2em;
 }
 
 .docnav li.up a strong {
 	background: url(../images/stock-go-up.png) top left no-repeat;
 	padding:5px;
 	padding-left:28px;
-	font-size:1.2em;
 }
 
 .docnav a:link, .docnav a:visited {
@@ -1248,7 +1325,7 @@ ul li p:last-child, ul li div.para:last-child {
 }
 
 .docnav a {
-	max-width: 10em;
+	max-width: 10px;
 	overflow:hidden;
 }
 
@@ -1267,25 +1344,25 @@ ul.docnav {
 /* Reports */
 .reports ul {
 	list-style:none;
-	margin:0em;
-	padding:0em;
+	margin:0px;
+	padding:0px;
 }
 
 .reports li{
-	margin:0em;
-	padding:0em;
+	margin:0px;
+	padding:0px;
 }
 
 .reports li.odd {
 	background-color: #eeeeee;
-	margin:0em;
-	padding:0em;
+	margin:0px;
+	padding:0px;
 }
 
 .reports dl {
 	display:inline;
-	margin:0em;
-	padding:0em;
+	margin:0px;
+	padding:0px;
 	float:right;
 	margin-right: 17em;
 	margin-top:-1.3em;
@@ -1293,21 +1370,21 @@ ul.docnav {
 
 .reports dt {
 	display:inline;
-	margin:0em;
-	padding:0em;
+	margin:0px;
+	padding:0px;
 }
 
 .reports dd {
 	display:inline;
-	margin:0em;
-	padding:0em;
+	margin:0px;
+	padding:0px;
 	padding-right:.5em;
 }
 
 .reports h2, .reports h3{
 	display:inline;
 	padding-right:.5em;
-	font-size:10pt;
+	font-size: 14px;
 	font-weight:normal;
 }
 
@@ -1316,16 +1393,16 @@ ul.docnav {
 	float:right;
 	width:16em;
 	background:#c00 url(../images/shine.png) top left repeat-x;
-	margin:0em;
+	margin:0px;
 	margin-top:-1.3em;
-	padding:0em;
+	padding:0px;
 	border:none;
 }
 
 /*uniform*/
 body.results, body.reports {
 	max-width:57em ;
-	padding:0em;
+	padding:0px;
 }
 
 /*Progress Bar*/
@@ -1355,25 +1432,25 @@ div.progress span.fuzzy {
 
 .results ul {
 	list-style:none;
-	margin:0em;
-	padding:0em;
+	margin:0px;
+	padding:0px;
 }
 
 .results li{
-	margin:0em;
-	padding:0em;
+	margin:0px;
+	padding:0px;
 }
 
 .results li.odd {
 	background-color: #eeeeee;
-	margin:0em;
-	padding:0em;
+	margin:0px;
+	padding:0px;
 }
 
 .results dl {
 	display:inline;
-	margin:0em;
-	padding:0em;
+	margin:0px;
+	padding:0px;
 	float:right;
 	margin-right: 17em;
 	margin-top:-1.3em;
@@ -1381,21 +1458,21 @@ div.progress span.fuzzy {
 
 .results dt {
 	display:inline;
-	margin:0em;
-	padding:0em;
+	margin:0px;
+	padding:0px;
 }
 
 .results dd {
 	display:inline;
-	margin:0em;
-	padding:0em;
+	margin:0px;
+	padding:0px;
 	padding-right:.5em;
 }
 
 .results h2, .results h3 {
 	display:inline;
 	padding-right:.5em;
-	font-size:10pt;
+	font-size: 14px;
 	font-weight:normal;
 }
 
@@ -1404,9 +1481,9 @@ div.progress span.fuzzy {
 	float:right;
 	width:16em;
 	background:#c00 url(../images/shine.png) top left repeat-x;
-	margin:0em;
+	margin:0px;
 	margin-top:-1.3em;
-	padding:0em;
+	padding:0px;
 	border:none;
 }
 
@@ -1434,7 +1511,7 @@ pre {
 	background-color: transparent;
 	margin-top: 1em;
 	margin-bottom: 1em;
-	font-size: 1.4em;
+	font-size: 20px;
 	font-weight: bold;
 	text-align: center;
 }
@@ -1481,15 +1558,15 @@ dl:after {
 }
 
 .toc dd {
-	padding-bottom: 0em;
+	padding-bottom: 0px;
 	margin-bottom: 1em;
 	padding-left: 1.3em;
-	margin-left: 0em;
+	margin-left: 0px;
 }
 
 div.toc > dl > dt {
-	padding-bottom: 0em;
-	margin-bottom: 0em;
+	padding-bottom: 0px;
+	margin-bottom: 0px;
 	margin-top: 1em;
 }
 
@@ -1503,8 +1580,8 @@ div.toc > dl > dt {
 }
 
 .calloutlist img, .callout {
-	padding: 0em;
-	margin: 0em;
+	padding: 0px;
+	margin: 0px;
 	width: 12pt;
 	display: inline;
 	vertical-align: middle;
