--- a/publican/datadir/Common_Content/common/en-US/css/common.css
+++ b/publican/datadir/Common_Content/common/en-US/css/common.css
@@ -12,7 +12,7 @@ body {
 	margin:0 auto;
 	font-family: "liberation sans", "Myriad ", "Bitstream Vera Sans", "Lucida Grande", "Luxi Sans", "Trebuchet MS", helvetica, verdana, arial, sans-serif;
 	font-size: 14px;
-	max-width: 55em;
+	max-width: 770px;
 	color: black;
 }
 
@@ -174,6 +174,10 @@ h1 {
 }
 
 .set .titlepage > div > div > h1.title {
+	text-align: center;
+}
+
+.part > .titlepage h1.title {
 	text-align: center;
 }
 
@@ -662,6 +666,7 @@ li p, li div.para {
 img {
 	display:block;
 	margin: 2em 0;
+	max-width: 100%;
 }
 
 .inlinemediaobject, .inlinemediaobject img {
@@ -752,6 +757,19 @@ img {
 /* no bold in toc */
 .toc * {
 	font-weight: inherit;
+}
+
+.toc H1 {
+	font-weight: bold;
+}
+
+
+div.programlisting {
+	white-space: pre-wrap; /* css-3 */
+	white-space: -moz-pre-wrap !important; /* Mozilla, since 1999 */
+	white-space: -pre-wrap; /* Opera 4-6 */
+	white-space: -o-pre-wrap; /* Opera 7 */
+	word-wrap: break-word; /* Internet Explorer 5.5+ */
 }
 
 pre {
@@ -1591,5 +1609,6 @@ div.toc > dl > dt {
 	list-style-image: none;
 	list-style-type: upper-alpha;
 }
-
-
+.task {
+/*	page-break-inside: avoid; /*
+}
