tweak book style
git-svn-id: file:///srv/svn/publican/trunk@2018 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/datadir/Common_Content/common/en-US/css/menu.css
+++ b/publican/datadir/Common_Content/common/en-US/css/menu.css
@@ -74,7 +74,7 @@ body.desktop .book > .toc {
 }
 
 .toc {
-	line-height:1.35em;
+/* 	line-height:1.35em; */
 }
 
 .toc .glossary,
@@ -1358,6 +1358,7 @@ ul li p:last-child, ul li para:last-child {
 
 ul.docnav {
 	margin-bottom: 1em;
+	padding-top: 5px;
 }
 /* Reports */
 .reports ul {
