--- a/publican/web/menu.css
+++ b/publican/web/menu.css
@@ -21,6 +21,8 @@ body {
 body.toc_embeded {
     margin: 0 auto;
     max-width: 100%;
+    padding-left: 0px;
+    padding-right: 0px;
 }
 a:focus {
     outline: medium none;
@@ -33,12 +35,13 @@ a:focus {
 .docnav {
     background-color: #C5C5C5;
     height: 35px;
-    margin: 35px auto 0;
-    max-width: 75em;
-    padding: 0 0 10px;
+/*    margin: 35px auto 0; */
+    margin-top: 4px;
+/*    max-width: 75em; */
+    padding: 0px;
 }
 .docnav li.home {
-    font-size: 18px !important;
+    font-size: 20px !important;
     margin: 0;
     padding: 0;
     top: auto;
@@ -58,7 +61,7 @@ a:focus {
     left: 50%;
     margin-left: -210px;
     margin-right: auto;
-    margin-top: 70px;
+    margin-top: 40px;
     max-height: 75%;
     overflow-y: scroll;
     padding: 20px;
