--- a/publican/web/menu.css
+++ b/publican/web/menu.css
@@ -110,7 +110,7 @@ a:focus {
     float: left;
     padding-top: 20px;
     position: relative;
-    text-indent: 25px;
+    padding-left: 25px;
     width: 25%;
 }
 .side_products:after {
@@ -119,8 +119,9 @@ a:focus {
 }
 .side_products div.link {
     font-size: 12px;
-    height: 24px;
-    line-height: 24px;
+/*    height: 24px; */
+    line-height: 1em;
+    margin-bottom: 10px;
 }
 .side_products div.link a {
     color: #333333;
@@ -728,8 +729,8 @@ div.version_tabs {
     cursor: pointer;
     display: block !important;
     font-family: Overpass;
-    height: 32px !important;
-    line-height: 32px !important;
+/*     height: 32px !important;
+    line-height: 32px !important; */
 }
 .side_products div.link:after {
     border-width: 16px !important;
