tweak menu layout
git-svn-id: file:///srv/svn/publican/trunk@2024 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/web/menu.css
+++ b/publican/web/menu.css
@@ -293,6 +293,7 @@ a:focus {
     list-style: none outside none !important;
     margin: 0;
     padding: 0 10px;
+    min-width: 100%;
 }
 #menu a {
     border: medium none !important;
