--- a/publican/datadir/Common_Content/common/en-US/css/menu.css
+++ b/publican/datadir/Common_Content/common/en-US/css/menu.css
@@ -1288,6 +1288,7 @@ ul li p:last-child, ul li para:last-child {
 .home{
     position:relative;
     cursor: pointer;
+    color: #336699;
 }
 
 .home:after {
