Port JBoss brand to Publican 3
git-svn-id: file:///srv/svn/publican/trunk@2044 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican-jboss/en-US/css/menu.css
+++ b/publican-jboss/en-US/css/menu.css
@@ -13,7 +13,6 @@ h1,h2,h3,h4,h5,h6 {
 div.producttitle {
 /*	background: #a70000 url(../images/h1-bg.png) top left repeat; */
 	color:#a70000;
-	font-size:2.0em;
 }
 
 .section h1.title {
@@ -45,3 +44,8 @@ table tr.even td {
 span.remark{
 	background-color: #ffff00;
 }
+
+.home{
+    color: #a70000;
+}
+
