--- a/publican/web/menu.css
+++ b/publican/web/menu.css
@@ -470,9 +470,9 @@ body > #wrapper {
 #menu {
     z-index: 999;
 /*box-shadow*/
--webkit-box-shadow:0 1px 0 #999999, 0 -1px 8px #888888, 0 -30px 30px -20px #CCCCCC inset;
-   -moz-box-shadow:0 1px 0 #999999, 0 -1px 8px #888888, 0 -30px 30px -20px #CCCCCC inset;
-        box-shadow:0 1px 0 #999999, 0 -1px 8px #888888, 0 -30px 30px -20px #CCCCCC inset;
+-webkit-box-shadow: 0 -1px 8px #888888, 0 -30px 30px -20px #CCCCCC inset;
+   -moz-box-shadow: 0 -1px 8px #888888, 0 -30px 30px -20px #CCCCCC inset;
+        box-shadow: 0 -1px 8px #888888, 0 -30px 30px -20px #CCCCCC inset;
     background-color:#EEEEEE;
 
 }
