fix first breadcrumb colour

--- a/publican/web/menu.css
+++ b/publican/web/menu.css
@@ -251,12 +251,20 @@ a:focus {
     padding: 0 10px;
     min-width: 100%;
 }
+
 #menu a {
     border: medium none !important;
-    color: white;
+    color: #444444;
     white-space: pre;
     display: inline;
+    text-decoration: none;
 }
+
+#menu ul a,
+#lang_menu:hover a {
+    color: white;
+}
+
 .breadcrumb {
     padding-left: 10px;
     padding-right: 10px;
