fix display of version pages

--- a/publican/templates/language_index.tmpl
+++ b/publican/templates/language_index.tmpl
@@ -1,7 +1,7 @@
 [%- lang_menu = "index.html" -%]
 [% INCLUDE 'web_2_head.tmpl' %]
 <script type="text/javascript" src="[% host %]/jquery.jcarousel.min.js"></script>
-<script>
+<script type="text/javascript">
 	var current_product = "Products";
 	function sideProductsLinkClicked(productname,linkclass, displayclass)
 	{
