--- a/publican/templates/web_2_head.tmpl
+++ b/publican/templates/web_2_head.tmpl
@@ -5,8 +5,8 @@
 <title>[% title %]</title>
 <link rel="stylesheet" href="[% host %]/menu.css" type="text/css" />
 <meta name="generator" content="publican [% publican_version %]" />
-<script src="[% host %]/toc.js"></script>
-<script src="[% host %]/jquery-1.7.1.min.js"></script>
+<script type="text/javascript" src="[% host %]/toc.js"></script>
+<script type="text/javascript" src="[% host %]/jquery-1.7.1.min.js"></script>
 </head>
 <body class="menu">
 <div id="wrapper">
