--- a/publican/templates/books_index.tmpl
+++ b/publican/templates/books_index.tmpl
@@ -3,8 +3,9 @@
 [%- book_menu = 1 -%]
 [%- book_lang_menu = 1 -%]
 [% INCLUDE 'web_2_head.tmpl' %]
-<script>var current_product = "[% product %]"; var current_version= "[% version %]"; var current_book= "[%title %]"</script>
-<h1>[%title %]</h1>
+<script type="text/javascript">var current_product = "[% product %]"; var current_version= "[% version %]"; var current_book= "[%title %]"</script>
+<h1>[% title %]</h1>
+<h2>[% book.subtitle %]</h2>
 <div class="book_top_box">
 [%- book.abstract -%]
 </div>
