--- a/publican/templates/web_2_head.tmpl
+++ b/publican/templates/web_2_head.tmpl
@@ -12,18 +12,18 @@
 <div id="wrapper">
 <div id="menu">
 	<div id="lang_menu" class="breadcrumb"><a href="[% host %]/[% lang %]/index.html">[% site_title %]</a></div>
-	<div id="product_menu" class="breadcrumb" onmouseover="work=1; toggle('','product_menu_list');" onmouseout="work=1; toggle('','product_menu_list');">Pants</div>
+	<div id="product_menu" class="breadcrumb" onmouseover="work=1; expand_menu('product_menu_list');" onmouseout="work=1; retract_menu('product_menu_list');">Pants</div>
 [%- IF ver_menu %]
-	<div id="version_menu" class="breadcrumb" onmouseover="work=1; toggle('','version_menu_list');" onmouseout="work=1; toggle('','version_menu_list');"></div>
+	<div id="version_menu" class="breadcrumb" onmouseover="work=1; expand_menu('version_menu_list');" onmouseout="work=1; retract_menu('version_menu_list');"></div>
 [%- END %]
 [%- IF book_menu %]
-	<div id="book_menu" class="breadcrumb" onmouseover="work=1; toggle('','book_menu_list');" onmouseout="work=1; toggle('','book_menu_list');"></div>
+	<div id="book_menu" class="breadcrumb" onmouseover="work=1; expand_menu('book_menu_list');" onmouseout="work=1; retract_menu('book_menu_list');"></div>
 [%- END %]
 [%- IF book_lang_menu %]
-	<div id="book_lang_menu"  onmouseover="work=1; toggle('','book_lang_menu_list');" onmouseout="work=1; toggle('','book_lang_menu_list');"></div>
+	<div id="book_lang_menu"  onmouseover="work=1; expand_menu('book_lang_menu_list');" onmouseout="work=1; retract_menu('book_lang_menu_list');"></div>
 [%- END %]
 [%- IF lang_menu %]
-	<div id="lang_menu_2"  onmouseover="work=1; toggle('','lang_menu_list');" onmouseout="work=1; toggle('','lang_menu_list');">
+	<div id="lang_menu_2"  onmouseover="work=1; expand_menu('lang_menu_list');" onmouseout="work=1; retract_menu('lang_menu_list');">
 [%- FOREACH lang_t = langs %]
 [% IF lang_t.lang == lang %]
 		<div>[% lang_t.lang_name %]</div>
