fix bottom version books not displaying properly with one book

--- a/publican/web/menu.css
+++ b/publican/web/menu.css
@@ -456,8 +456,6 @@ body > #wrapper {
 }
 .bottom_versions {
     line-height: 1.3em;
-}
-.bottom_versions {
     padding-left: 1em;
     position: relative;
 }
@@ -901,6 +899,7 @@ div.version_tabs {
     background-color: white;
     float: left;
     padding: 40px !important;
+    min-width: 80%;
 }
 
 .product_bottom_box .bottom_versions {
