extra padding for italic untranslated string

--- a/publican/web/menu.css
+++ b/publican/web/menu.css
@@ -359,6 +359,7 @@ div.book, div.article, div.set, div.preface, div.chapter, div.section, div.appen
 .untranslated span {
     opacity: 0.5;
     margin-left: 10px;
+    padding-right: 5px !important;
 }
 
 #search_box {
@@ -658,6 +659,7 @@ body > #wrapper .book_top_box {
     position: relative;
     text-decoration: none !important;
     z-index: 6;
+    padding-right: 1px;
 }
 .bottom_versions div:nth-child(2n) a {
 }
