--- a/publican/templates/products_index.tmpl
+++ b/publican/templates/products_index.tmpl
@@ -17,7 +17,7 @@
 		</div>
 		[% FOREACH  c_book = i_sort(cur_ver) %][% booker = book_list.${ver}.${c_book} %]
 		<div class="bottom_books[% IF lang != booker.lang %] untranslated [% lang %][% END %]">
-			<a href="[% host %]/[% lang %]/[% product %]/[% booker.version %]/[% booker.book %]/index.html">[% booker.book_clean %]</a>[% IF lang != booker.lang %]<span>[% trans_strings.Untranslated %]</span>[% END %]
+			<a href="[% host %]/[% lang %]/[% product %]/[% booker.version %]/[% booker.book %]/index.html">[% booker.book_clean %][% IF lang != booker.lang %] <span>[% trans_strings.Untranslated %]</span>[% END %]</a>
 		</div>
 		[%- END %]
 	</div>
