remove references to unused images

--- a/publican/web/menu.css
+++ b/publican/web/menu.css
@@ -817,7 +817,7 @@ div.version_tabs {
     color: #000000;
 }
 .jcarousel-next-horizontal {
-    background: url("next-horizontal.png") no-repeat scroll 0 0 #DDDDDD;
+    background-color: #DDDDDD;
     cursor: pointer;
     height: 100%;
     opacity: 0;
@@ -840,7 +840,6 @@ div.version_tabs {
     width: 0;
 }
 .jcarousel-direction-rtl .jcarousel-next-horizontal {
-    background-image: url("prev-horizontal.png");
     left: 5px;
     right: auto;
 }
@@ -856,7 +855,7 @@ div.version_tabs {
     cursor: default;
 }
 .jcarousel-prev-horizontal {
-    background: url("prev-horizontal.png") no-repeat scroll 0 0 #DDDDDD;
+    background-color: #DDDDDD;
     cursor: pointer;
     height: 100%;
     left: -32px;
@@ -879,7 +878,6 @@ div.version_tabs {
     width: 0;
 }
 .jcarousel-direction-rtl .jcarousel-prev-horizontal {
-    background-image: url("next-horizontal.png");
     left: auto;
     right: 5px;
 }
