only have box shadow on root block

--- a/publican/web/menu.css
+++ b/publican/web/menu.css
@@ -16,7 +16,7 @@ body.toc_embeded {
 a:focus {
     outline: medium none;
 }
-div.book, div.article, div.set, div.preface, div.chapter, div.section, div.appendix, div.part {
+body > div.book, body > div.article, body > div.set, body > div.preface, body > div.chapter, body > div.section, body > div.appendix, body > div.part {
     margin-left: auto;
     margin-right: auto;
     max-width: 55em;
