add some padding to main body

--- a/publican/web/menu.css
+++ b/publican/web/menu.css
@@ -25,7 +25,8 @@ body > div.book, body > div.article, body > div.set, body > div.preface, body > 
    -moz-box-shadow: 0 0 0 1px #AAAAAA, 0 0 10px 0 #777777;
         box-shadow: 0 0 0 1px #AAAAAA, 0 0 10px 0 #777777;
     background-color: white;
-    padding-left: 16px;
+    padding-left: 30px;
+    padding-right: 40px;
 }
 
 .lang_top_box {
